--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,16 @@
 <resources>
     <string name="app_name">Have a good day!</string>
     <string name="hello_blank_fragment">Hello blank fragment</string>
+    <string name="single">---</string>
+    <string name="runtime">--:--</string>
+    <string name="totaltime">--:--</string>
+    <string name="title">------</string>
+    <string name="gredientbg">TODO</string>
+    <string name="back">TODO</string>
+    <string name="tim">TODO</string>
+    <string name="previous">TODO</string>
+    <string name="random">TODO</string>
+    <string name="playorpause">TODO</string>
+    <string name="next">TODO</string>
+    <string name="repeat">TODO</string>
 </resources>
